--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.1",
     "file-saver": "^2.0.5",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "next": "15.2.0",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-i18next": "^15.4.1",
     "react-syntax-highlighter": "^15.6.1",
     "xml-js": "^1.6.11"
   }
